--- a/README
+++ b/README
@@ -1,7 +1,2 @@
-reCAPTCHA README
-================
-
-The reCAPTCHA PHP Lirary helps you use the reCAPTCHA API. Documentation
-for this library can be found at
-
-	http://recaptcha.net/plugins/php
+Snapkart is a Image Gallary website where user can SignUp, SignIn, Logout from the account.
+Main functionallity of the website is the user can Upload and Store there Images.
