--- a/README
+++ b/README
@@ -1,2 +1,7 @@
 Snapkart is a Image Gallary website where user can SignUp, SignIn, Logout from the account.
 Main functionallity of the website is the user can Upload and Store there Images.
+• Technologies -  HTML5/CSS, PHP, MySql.
+• Project Team - 2.
+• My Responsibility - FrontEnd.
+• Duration - 3 Months.
+• Location - Gujarat,India.
